# qkrun

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker_build_notes.txt
alicloud_images/x86_64-unknown-linux-musl/: Dockerfile
build_images/kaniko_build/: kaniko.yaml
devinit_scripts/rust/: init.sh
docker/rust_cross_build/: Dockerfile
docker/rust_dev/: Dockerfile
dockerfiles/code_server_with_ssh/: Dockerfile
gitpod_like/base_code_server/k8s_codeserver/hostnet/: hostnet.yaml
quickrun/: Cargo.toml
quickrun/src/: cli.rs  k8sapi.rs  kaniko.rs  kaniko_docker.rs  lib.rs  main.rs  usebuildkit.rs
quickrun/src/templates/: models.rs  storage.rs
rustdevlibs/apidocker/: Cargo.toml
rustdevlibs/apidocker/src/: lib.rs
rustdevlibs/apik8s/: Cargo.toml
rustdevlibs/apik8s/src/: kt.rs  lib.rs
src/: cli.rs  lib.rs  main.rs  usebuildkit.rs
