[package]
name = "apidocker"
version = "0.1.0"
edition = "2021"


#docker run --rm linuxserver/docker-compose docker-compose --version
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.13"
# tokio = { version = "1.18", features = ["full"] }
futures-util = "0.3.21"
tracing = "0.1.35"
